# infra

./: .gitignore  README.md  dev.yaml  hosts  hosts.bak  main.yaml  prod.yaml  pyproject.toml  secrets-example.yaml  secrets.enc  update-prod.yaml
roles/caddy/tasks/: main.yml
roles/docker/tasks/: main.yml
roles/nginx/tasks/: main.yml
roles/nginx/templates/: wamf.conf.j2
roles/poetry/handlers/: main.yml
roles/poetry/tasks/: main.yml
roles/wamf/defaults/: main.yml
roles/wamf/files/: compose.yaml
roles/wamf/files/client/: deploy_frontend.py
roles/wamf/files/server/: compose.yaml
roles/wamf/files/webhook/: webhook.py
roles/wamf/tasks/: caddy.yml  client.yml  main.yml  server.yml  webhook.yml
roles/wamf/templates/: Caddyfile.j2  env.client.j2  env.server.j2  wamf-backend.service.j2  wamf-webhook.service.j2
roles/wamf/vars/: main.yml
webhook/: client.py  server.py  webhook.py
